package com.example.testing

/*
 * Created by Sudhanshu Kumar on 20/08/23.
 */

object Tags {

    const val BRAND_NAME = "brand_logo"
    const val BRAND_DESCRIPTION = "brand_description"
    const val BRAND_LOGO = "brand_logo"
    const val PHONE_ENTER = "phone_enter"
    const val PHONE_VIEW_NEXT_BTN = "phone_view_next_btn"
    const val VERIFY_ENTER_OTP = "verify_enter_otp"
    const val RESEND_OTP = "resend_otp"
    const val OTP_ENTER_VIEW = "otp_enter_view"
    const val VERIFY_BTN = "verify_btn"
    const val TOOLBAR_BACK_BTN = "toolbar_back_btn"
    const val TOOLBAR_END_BTN = "toolbar_end_btn"
    const val SIGNUP_SCREEN_PROGRESS = "signup_screen_progress"
    const val LOADING_ANIM = "loading_anim"
    const val LOADING_ANIM_PROGRESS = "loading_anim_progress"

    //HomeScreen
    const val TIP_ICON = "tip_icon"
    const val SHOP_CARD_BANNER = "shop_card_banner"
    const val TRANSIT_SHOP_BANNER = "transit_shop_banner"

    //grow listing screen
    const val GROW_RV_ITEM_IMAGE = "grow_rv_item_image"

    //grow detail screen
    const val GROW_DETAIL_TOP_IMAGE = "grow_detail_top_image"
    const val GROW_DETAIL_REQ_BADGE_IMG = "grow_detail_req_badge_img"

    //local plants listing screen
    const val LOCAL_PLANT_LIST_ITEM_IMAGE = "local_plant_list_item_image"

}