<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="user_ref">users</string>
	<string name="token">notifyTokens</string>
</resources>